--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ["Thomas Gentry"]
+authors = ["Thomas Gentry <thomas@awfulsec.com>, Erin Power <xampprocky@gmail.com>"]
 build = "build.rs"
 categories = ["command-line-utilities", "development-tools", "visualization"]
 description = "Count your code, quickly."
@@ -15,7 +15,7 @@ include = [
 ]
 keywords = ["utility", "cli", "cloc", "lines", "statistics"]
 license = "MIT OR Apache-2.0"
-name = "tokei"
+name = "tokei-tokens"
 readme = "README.md"
 repository = "https://github.com/graves/tokei-tokens.git"
 version = "13.0.0"
